--- a/relatorio/relatorio_intermedio.tex
+++ b/relatorio/relatorio_intermedio.tex
@@ -275,12 +275,12 @@ Ao realizar as acções anteriores, a base de dados irá ser atualizada em confo
 
 %inserir os prints
 \pagebreak
-\subsection{Considerações Finais}
+\section{Considerações Finais}
 
 Relativamente ao planeamento intermédio, a implementação da base de dados surgiu como um pretexto de tornar a aplicação escalável de modo a que mais do que um utilizador a pudesse utilizar. 
 A inserção de novos dispositivos esteve sempre dependente da informação presente na conta \textit{SigFox}, pelo que se teve de separar o registo de um utilizador no seio da aplicação e o registo de um utilizador do serviço prestado pela \textit{Sigfox}.
 
-Assim não foi possível testar o correcto funcionamento de um utilizador com mais de dispositivo registado na conta \textit{SigFox}, uma vez que cada utilizador registado possuía apenas 1 dispositivo associado. Para dispositivos não existentes/associados à conta \textit{SigFox}, existe o correcto funcionamento da aplicação, não apresentando qualquer mensagem associado a este suposto dispositivo, pelo que se assume o normal funcionamento caso houvesse realmente dois dispositivos associados.
+Assim não foi possível testar o correcto funcionamento de um utilizador com mais de um dispositivo registado na conta \textit{SigFox}, uma vez que cada utilizador registado possuía apenas 1 dispositivo associado. Para dispositivos não existentes/associados à conta \textit{SigFox}, existe o correcto funcionamento da aplicação, não apresentando qualquer mensagem associado a este suposto dispositivo, pelo que se assume o normal funcionamento caso houvesse realmente dois dispositivos associados.
 
 Por fim, em termos de apresentação de forma \textit{user friendly}, este objectivo assume-se assegurado, porém a existência de uma interface gráfica representativa da subida ou descida de temperatura, ou indicativa da qualidade de ligação podia ter sido uma forma de aumentar o nível de fluidez e clareza da informação disponibilizada ao utilizador.
 
